# asp.netcore

./: .gitignore  README.md  asp.net core.sln
AggregateRoot/: AggregateRoot.csproj  Program.cs
Algorithm/: Algorithm.vcxproj
ApiResource/: ApiResource.csproj  ApiResource.http  Program.cs  WeatherForecast.cs
Array/: Array.vcxproj
AssemblyAndReflection/: Program.cs  程序集与反射与元数据.md
AssemblyDemo/: AssemblyDemo.csproj  PROJECT_SUMMARY.md  Program.cs  README.md
AuthServer/: AuthServer.http
BasicAuth/: BasicAuth.csproj  BasicAuth.http  Program.cs  WeatherForecast.cs
CProj/: CProj.vcxproj  main.c
C_Fundamental/: C_Fundamental.vcxproj  C_Fundamental.vcxproj.filters  README.md  main.cpp
C_Practise_Again/: C_Practise_Again.cpp  C_Practise_Again.vcxproj  C_Practise_Again.vcxproj.filters  CommonLib.h  LinkList.c  LinkList.h  main.c
ConsoleApp1/: BasicAuth-Usage.md  ConsoleApp1.csproj  IdentityServer4-Usage.md  OpenIddict-Usage.md  README-Module1.md  README-Module2.md  README-Module3.md  README-Module4.md  SSO-Usage.md
DDD.ECommerce/: DDD.ECommerce.csproj  DDD.ECommerce.http  Program.cs
DDDCore/: Class1.cs
DeletegateDemo/: Client.cs  Email.cs  EmailServer.cs  Program.cs  Server.cs
EfCore.Web/: Program.cs  (+2 more)
rust_mini_kernel/: .gitignore  Cargo.toml  EXAMPLES.md  FIX_PAGE_MAPPING_ERROR.md  Makefile  PROJECT_SOLUTIONS.md  PROJECT_SUMMARY.md  QEMU_TROUBLESHOOTING.md  QUICKREF.md  README.md  RUN_IN_WSL.md  RUST_KERNEL_CN.md  bootloader.toml  qemu_diagnose.bat  qemu_runner.ps1  run_kernel.sh  run_qemu.bat
rust_mini_kernel/src/: main.rs  serial.rs  vga_buffer.rs
(+739 files in other folders)
